# video-to-text

./: .gitignore  CONTEXT.md  README.md  app.py  build_android.bat  check_gpu.py  download_vosk_model.py  gemini_context.md  mobile_app.py  test_faster.py  test_whisper.py
.github/workflows/: build_apk.yml
docs/ai_logs/: 2026-05-14_infrastructure_and_backup.md
mobile_src/: main.py  pyproject.toml
scratch/: test_fp.py  test_fp_page.py
